--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.9.3",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.8.0",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-moment": "^0.9.6",
